# ros2-line-follower

./: .gitignore  LICENSE  NOTICE  README.md  package.xml  setup.py
docs/: about.md  parameters.md  video_demos.md  warnings.md
follower/: follower.py  follower_node.py  setup.cfg  test_topic.py
follower/docs/: about.md  parameters.md  video_demos.md
follower/follower/: DC_Motor_pi.py  follower_node.py  test.py
follower/models/custom_turtlebot/: model.sdf  old_model.sdf
follower/models/track2/: model.sdf
follower/models/yellow line/: model.config  model.sdf
launch/: new_track.launch.py
models/: ROS1-Custom-Turtlebot.urdf.xacro
models/custom_turtlebot/: NOTICE  model.config  model.sdf
models/track2/: model.config  model.sdf
models/track2/materials/scripts/: track.material
ros1_references/: black_track.launch  black_track.world
ros2_references/: motor_actuator.py  motor_teleop.py  setup.py
worlds/: new_track0.world  new_track1.world  new_track2.world
